# cuicui_layout

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  draft-book.yml  publish-release-book.yml
assets/: bevypunk.chirp  chirp_menu.chirp  imports.chirp  imports_defs.chirp  templates.chirp  trivial.chirp
assets/better_factorio/: menu.chirp
chirp/: Cargo.toml  README.md
chirp/src/: grammar.rs  interpret.rs  lex.rs  lib.rs  load_asset.rs  parse.rs  parse_dsl_impl.rs  reflect.rs  swar.rs  template.rs  wraparg.rs  wrapparg.rs
chirp/src/loader/: internal.rs  mod.rs  print_hierarchy.rs  remove_ids.rs  scene.rs  spawn.rs
chirp/src/parse/: args.rs  escape.rs  mod.rs  split.rs
chirp/src/parse_dsl/: args.rs  mod.rs  split.rs  tests.rs
chirp/src/parser/: ast.rs  grammar.rs  interpret.rs  lex.rs  mod.rs  scope.rs  stream.rs  tests.rs
chirp/src/parser/ast/: build.rs  header.rs  ident.rs  list.rs  mod.rs  node.rs
chirp/src/parser/grammar/: chirp_file.rs  generic.rs  mod.rs  tests.rs  tokens.rs
chirp_macros/: Cargo.toml  README.md
chirp_macros/src/: generate.rs  lib.rs
cuicui/: Cargo.toml
cuicui/src/: lib.rs
design_docs/: ast.md  better_ast.md  book_organization.md  change_detection_layout_update.md  chirp_handles.md  content_sized.md  debug.md  error_reporting.md  extensible_layout_dsl_macro.md  formatting.md  import_semantics.md  interpret_assume_single_root.md  layout_error_refactor.md  layout_format.md  managing_errors_interpret.md  migrate_leaf_nodes.md  new_syntax.md  parse_args_dumb_param.md  proper_spawn.md  quasi-random.md  stash_ast.rs  template_impl.md  template_syntax.md  text_debug.md  whitespace_after_lex.md
dsl/: Cargo.toml  README.md
dsl/src/: lib.rs  macros.rs
examples/: README.md  layout.rs
examples/bevypunk/: Cargo.toml  main.rs  rustfmt.toml
examples/chirp_loader/: Cargo.toml  main.rs
examples/chirp_menu/: Cargo.toml  README.md  main.rs
examples/chirpunk/: Cargo.toml  README.md
examples/chirpunk/menus/: main.chirp  settings.chirp
examples/chirpunk/src/: colormix.rs  dsl.rs  main.rs  show_menus.rs  style.rs  ui_event.rs  ui_offset.rs
examples/chirpunk/src/animate/: bloom.rs  button_shift.rs  main_menu_bg.rs  mod.rs
examples/chirpunk/src/dsl/: cycle_button.rs  element.rs  mod.rs
examples/cuicui_examples/: Cargo.toml
examples/cuicui_examples/src/: highlight.rs  lib.rs  mirror.rs  switch.rs
examples/custom_dsl/: Cargo.toml  README.md
examples/custom_dsl/src/: dsl.rs  main.rs  reflect_on_click.rs
examples/dsl_and_chirp/: Cargo.toml  main.rs
examples/dsl_and_chirp/src/: main.rs
examples/hello_world/: Cargo.toml  main.rs
examples/imports/: Cargo.toml  main.rs
examples/parse_dsl_macro/: Cargo.toml  main.rs
examples/simple_menu/: Cargo.toml  README.md  main.rs
examples/sprite_debug/: Cargo.toml  main.rs
examples/sprite_mesh_debug/: Cargo.toml  main.rs
examples/templates/: Cargo.toml  main.rs
examples/ui_debug/: Cargo.toml  main.rs  rustfmt.toml
format/: Cargo.toml  README.md
format/src/: interpret.rs  lib.rs  parse.rs
format_derive/: Cargo.toml  README.md
format_derive/src/: generate.rs  lib.rs
layout/: Cargo.toml  README.md  content_sized.md  debug.md
layout/src/: alignment.rs  builder.rs  bundles.rs  content_sized.rs  debug.rs  direction.rs  dsl.rs  error.rs  labels.rs  layout.rs  lib.rs  macros.rs  rule.rs  systems.rs  typed.rs  ui_bundle.rs
layout/src/debug/: inset.rs  mod.rs  text.rs  text_offset.rs
layout/src/dsl/: command_like.rs  ui_bundle.rs
licenses/: LICENSE-MIT
scripts/: x_platform_ln.sh
sprite/: Cargo.toml  README.md
sprite/src/: content_sized.rs  dsl.rs  dsl_extension.rs  lib.rs
src/: alignment.rs  direction.rs  error.rs  layout.rs  lib.rs  render.rs  typed.rs
the_book/: SUMMARY.md  book.toml  choosing_a_cuicui_crate.md  custom.css  introduction.md  reactivity.md  usage.md
the_book/theme/: book.js
the_book/theme/fonts/: fonts.css
ui/: Cargo.toml  README.md
ui/src/: bundles.rs  content_size.rs  content_sized.rs  debug.rs  dsl.rs  dsl_extension.rs  fixup.rs  into_ui_bundle.rs  layout_dsl.rs  layout_macro.rs  lib.rs  macros.rs  text_fixup.rs
