[workspace]
resolver = "2"
exclude = ["assets/"]
members = [
  "examples/*",
  "dsl",
  "chirp",
  "chirp_macros",
  "layout",
  "sprite",
  "ui",
]

[workspace.package]
edition = "2021"
authors = ["Nicola Papale"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicopap/cuicui_layout"

[workspace.dependencies]
anyhow = "1.0.72"
bevy-inspector-egui = "0.19"
bevy_mod_sysfail = "3"
enumset = "1.1"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", default-features = false, features = ["full", "parsing", "proc-macro", "printing"] }
smallvec = { version = "1.11.0", features = ["union", "const_generics"] }
thiserror = "1.0.44"
winnow = "0.5.10"

cuicui_dsl = { version = "0.8.2", path = "./dsl" }
cuicui_chirp = { version = "0.8.0", path = "./chirp" }
cuicui_layout = { version = "0.8.1", path = "./layout", default-features = false }
cuicui_layout_bevy_sprite = { version = "0.8.1", path = "./sprite", default-features = false }
cuicui_layout_bevy_ui = { version = "0.8.1", path = "./ui" }
cuicui = { version = "0.8.0", path = "./cuicui" }

[workspace.metadata.release]
dependent-version = "upgrade"
