[workspace]
resolver = "2"
exclude = ["assets/", "the_book/"]
members = [
  "examples/chirp_menu",
  "examples/dsl_and_chirp",
  "examples/hello_world",
  "examples/simple_menu",
  "examples/sprite_debug",
  "examples/templates",
  "dsl",
  "chirp",
  "chirp_macros",
  "layout",
  "sprite",
  "ui",
]

[workspace.package]
edition = "2021"
authors = ["Nicola Papale"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicopap/cuicui_layout"

[workspace.dependencies]
anyhow = "1.0.72"
bevy_mod_sysfail = "5"
# TODO make this optional as well
css-color = "0.2.5"
# TODO make this optional, only used in debug module of cuicui_layout
enumset = "1.1"
# This is only for the binary examples, we shouldn't set the log level for the
# library crates
log = { version = "0.4.20", features = ["release_max_level_warn"] }
miette = "5.10.0"
pretty_assertions = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
ron = "0.8.1"
syn = { version = "2.0.28", default-features = false, features = ["full", "parsing", "proc-macro", "printing", "clone-impls"] }
smallvec = { version = "1.11.0", features = ["union", "const_generics"] }
thiserror = "1.0.44"
tracing = { version = "0.1.37", features = ["release_max_level_warn"] }
winnow = "0.5.15"

cuicui_dsl = { version = "0.10.2", path = "./dsl" }
cuicui_chirp = { version = "0.10.2", path = "./chirp" }
cuicui_layout = { version = "0.10.2", path = "./layout", default-features = false }
cuicui_layout_bevy_sprite = { version = "0.10.2", path = "./sprite", default-features = false }
cuicui_layout_bevy_ui = { version = "0.10.2", path = "./ui" }
cuicui = { version = "0.8.0", path = "./cuicui" }

# For examples only
# bevy_framepace = "0.13.3"
# bevy-inspector-egui = "0.19"
# bevy_mod_picking = { version = "0.15.0", default-features = false, features = [
#   "backend_bevy_ui",
# ] }
# bevy-ui-navigation = "0.32.0"
rust-hsluv = "0.1.4"

[workspace.metadata.release]
dependent-version = "upgrade"

# This is only to profile & analyze ASM output of the binary examples
[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
split-debuginfo = "packed"
debug = 1

# Speed up tests (set opt-level of packages not used in tests so that
# hopefully cargo re-uses the same artifacts)
[profile.test.package.bevy_ecs]
opt-level = 1
[profile.test.package.bevy_render]
opt-level = 1
[profile.test.package.image]
opt-level = 1
[profile.test.package.png]
opt-level = 1
# Speed up dev
[profile.dev.package.bevy_ecs]
opt-level = 1
[profile.dev.package.bevy_render]
opt-level = 1
[profile.dev.package.image]
opt-level = 1
[profile.dev.package.png]
opt-level = 1
