[package]
name = "cuicui_chirp"
description = "A file format based on cuicui_dsl to describe bevy UIs"
categories = ["game-development", "gui"]
keywords = ["bevy", "ui"]
readme = "README.md"
version = "0.8.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["macros"]
macros = ["cuicui_chirp_macros"]
test_and_doc = ["cuicui_dsl/test_and_doc"]
# For debugging the parser EXTREMELY SLOW COMPILE TIMES
trace_parser = ["winnow/debug"]
# Enable bevy_asset support and hot reloading of chirp files.
bevy_asset = ["bevy/bevy_asset", "bevy/bevy_scene"]

[dependencies]
anyhow.workspace = true
smallvec.workspace = true
thiserror.workspace = true
winnow.workspace = true
cuicui_chirp_macros = { version = "0.8.1", path = "../chirp_macros", optional = true }
cuicui_dsl.workspace = true
bevy = { version = "0.11", default-features = false }
