[package]
name = "cuicui_chirp"
description = "A file format based on cuicui_dsl to describe bevy UIs"
categories = ["game-development", "gui"]
keywords = ["bevy", "ui"]
readme = "README.md"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["macros", "fancy_errors", "load_font", "load_image"]
# Display nicely formatted error messages
fancy_errors = ["miette/fancy"]
macros = ["cuicui_chirp_macros"]
test_and_doc = ["cuicui_dsl/test_and_doc"]
trace_parser = ["winnow/debug"]
trace_lexer = []
load_font = ["bevy/bevy_text"]
load_image = ["bevy/bevy_render"]
debug = ["bevy/bevy_ui", "bevy/bevy_render"]

[dependencies]
anyhow.workspace = true
miette.workspace = true
ron.workspace = true
smallvec.workspace = true
thiserror.workspace = true
winnow.workspace = true
cuicui_chirp_macros = { version = "0.9.0", path = "../chirp_macros", optional = true }
cuicui_dsl.workspace = true
bevy = { version = "0.11", default-features = false, features = ["bevy_asset", "bevy_scene"] }
