[package]
name = "cuicui_chirp_macros"
description = "Proc macros for the cuicui_chirp crate"
categories = ["game-development", "gui", "value-formatting"]
keywords = ["bevy"]
readme = "README.md"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
