[package]
name = "cuicui"
description = "Collection of cuicui packages: UI for bevy & related crates"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "../README.md"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cuicui_layout.workspace = true
cuicui_dsl.workspace = true
