[package]
name = "cuicui_dsl"
description = "An easily-extensible macro to spawn things in bevy"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# workspace.winnow = true
bevy = { version = "0.11", default-features = false }
