[package]
name = "cuicui_dsl"
description = "An easily-extensible macro to spawn things in bevy"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test_and_doc = ["bevy/bevy_render", "bevy/bevy_asset"]

[dependencies]
# workspace.winnow = true
bevy = { version = "0.11", default-features = false }
