[package]
name = "cuicui_dsl"
description = "An easily-extensible macro to spawn things in bevy"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test_and_doc = ["bevy/bevy_render", "bevy/bevy_asset"]

[dependencies]
bevy = { version = "0.11", default-features = false }

[package.metadata.release]
pre-release-replacements = [
  {search="cuicui_dsl/[0-9.]+/",replace="cuicui_dsl/{{version}}/",file="README.md"},
  {search="cuicui_dsl-v[0-9.]+/",replace="cuicui_dsl-v{{version}}/",file="README.md"},
  {search="cuicui_dsl = .*",replace="cuicui_dsl = \"{{version}}\"",file="../the_book/usage.md"},
]
