[package]
name = "cuicui_format"
description = "A file format based on cuicui_dsl to describe bevy UIs"
categories = ["game-development", "gui"]
keywords = ["bevy", "ui"]
readme = "README.md"
version = "0.8.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test_and_doc = ["cuicui_dsl/test_and_doc"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
cuicui_dsl.workspace = true
kdl.workspace = true
winnow.workspace = true
bevy = { version = "0.11", default-features = false }
