[package]
name = "cuicui_layout"
description = "A layout algorithm for bevy and made to be understood by humans"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "../README.md"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["reflect"]
## Enable debug overlay
debug = ["bevy/bevy_gizmos", "bevy/bevy_render", "bevy/bevy_core_pipeline"]
## This is a workaround to NOT depend on bevy_ui for debug, yet
## supporting setups to draw on top of UI.
debug_bevy_ui = ["bevy/bevy_ui"]
reflect = []
## Enable chirp ParseDsl implementation
## Note that currently cuicui_layout doesn't compile without this feature.
# chirp = ["cuicui_chirp"]

[dependencies]
anyhow.workspace = true
bevy_mod_sysfail.workspace = true
enumset.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.9.0", path = "../chirp" } # , optional = true }
cuicui_dsl.workspace = true
bevy = { version = "0.11", default-features = false }

[package.metadata.release]
pre-release-replacements = [
  {file="../README.md", search="cuicui_layout = .*", replace="cuicui_layout = \"{{version}}\""},
  {file="../README.md", search="\\| 0.11 \\| [0-9.]* \\|", replace="| 0.11 | {{version}} |"},
]

[package.metadata.docs.rs]
features = ["debug", "debug_bevy_ui"]
