[package]
name = "cuicui_layout"
description = "A layout algorithm for bevy and made to be understood by humans"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["reflect", "chirp", "dsl"]
## Enable debug overlay
debug = ["bevy/bevy_gizmos", "bevy/bevy_render", "bevy/bevy_core_pipeline"]
## This is a workaround to NOT depend on bevy_ui for debug, yet
## supporting setups to draw on top of UI.
debug_bevy_ui = ["bevy/bevy_ui"]
reflect = []
## Enable chirp ParseDsl implementation for LayoutDsl
chirp = ["cuicui_chirp"]
## Enable dsl! DslBundle implementation for LayoutDsl
dsl = ["cuicui_dsl"]

[dependencies]
anyhow.workspace = true
bevy_mod_sysfail.workspace = true
enumset.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.9.0", path = "../chirp", optional = true, default-features = false, features = ["macros"]}
cuicui_dsl = { version = "0.9.0", path = "../dsl", optional = true }
bevy = { version = "0.11", default-features = false }

[package.metadata.docs.rs]
features = ["debug", "debug_bevy_ui"]

[package.metadata.release]
pre-release-replacements = [
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="README.md"},
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="content_sized.md"},
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="debug.md"},
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="../sprite/README.md"},
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="../examples/simple_menu/README.md"},
  {search="cuicui_layout/[0-9.]+/",replace="cuicui_layout/{{version}}/",file="../examples/chirp_menu/README.md"},
  {search="\\| 0.11 \\| [0-9.]* \\|",replace="| 0.11 | {{version}} |",file="../README.md"},
  {search="\\| 0.11 \\| [0-9.]* \\|",replace="| 0.11 | {{version}} |",file="../the_book/introduction.md"},
  {search="cuicui_layout = .*",replace="cuicui_layout = \"{{version}}\"",file="../the_book/usage.md"},
]
