[package]
name = "cuicui_layout_bevy_sprite"
description = "Integration with bevy_sprite for cuicui_layout"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui", "sprite", "2d"]
readme = "README.md"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sprite_text", "reflect", "chirp"]
reflect = ["cuicui_layout/reflect"]
sprite_text = []
chirp = ["cuicui_layout/chirp", "cuicui_chirp"]

[dependencies]
bevy_mod_sysfail.workspace = true
css-color.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.9.0", path = "../chirp", optional = true }
cuicui_dsl.workspace = true
cuicui_layout = { version = "0.9.0", path = "../layout", default-features = false, features = ["dsl"] }
bevy = { version = "0.11", default-features = false, features = [
  "bevy_sprite", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_render"
] }
