[package]
name = "cuicui_layout_bevy_sprite"
description = "Integration with bevy_sprite for cuicui_layout"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui", "sprite", "2d"]
readme = "README.md"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sprite_text", "reflect", "chirp"]
reflect = ["cuicui_layout/reflect"]
sprite_text = []
chirp = ["cuicui_layout/chirp", "cuicui_chirp", "reflect"]

[dependencies]
bevy_mod_sysfail.workspace = true
css-color.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.11.0", path = "../chirp", optional = true }
cuicui_dsl.workspace = true
cuicui_layout = { version = "0.11.0", path = "../layout", default-features = false, features = ["dsl"] }
bevy = { version = "0.12", default-features = false, features = [
  "bevy_sprite", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_render"
] }

[package.metadata.release]
pre-release-replacements = [
  {search="cuicui_layout_bevy_sprite/[0-9.]+/",replace="cuicui_layout_bevy_sprite/{{version}}/",file="README.md"},
  {search="cuicui_layout_bevy_sprite/[0-9.]+/",replace="cuicui_layout_bevy_sprite/{{version}}/",file="../examples/custom_dsl/README.md"},
  {search="cuicui_layout_bevy_sprite/[0-9.]+/",replace="cuicui_layout_bevy_sprite/{{version}}/",file="../the_book/choosing_a_cuicui_crate.md"},
]
