[package]
name = "cuicui_layout_bevy_ui"
description = "Integration with bevy_ui for cuicui_layout"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.8.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["debug_bevy_ui", "reflect"]
debug_bevy_ui = ["cuicui_layout/debug_bevy_ui"]
reflect = ["cuicui_layout/reflect"]
## Enable chirp ParseDsl implementation
## Note that currently cuicui_layout_bevy_ui doesn't compile without this feature.
# chirp = ["cuicui_chirp", "cuicui_layout/chirp"]

[dependencies]
bevy_mod_sysfail.workspace = true
css-color.workspace = true
enumset.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.8.1", path = "../chirp" }#, optional = true }
cuicui_dsl.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_render"] }

[package.metadata.release]
pre-release-replacements = [
  {file="../README.md", search="cuicui_layout_bevy_ui = .*", replace="cuicui_layout_bevy_ui = \"{{version}}\""},
]
