[package]
name = "cuicui_layout_bevy_ui"
description = "Integration with bevy_ui for cuicui_layout"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["debug_bevy_ui", "reflect", "chirp"]
debug_bevy_ui = ["cuicui_layout/debug_bevy_ui"]
reflect = ["cuicui_layout/reflect"]
## Enable chirp ParseDsl implementation
chirp = ["cuicui_chirp", "cuicui_layout/chirp"]

[dependencies]
bevy_mod_sysfail.workspace = true
css-color.workspace = true
enumset.workspace = true
thiserror.workspace = true
cuicui_chirp = { version = "0.10.0", path = "../chirp", optional = true }
cuicui_dsl.workspace = true
cuicui_layout = { version = "0.10.0", path = "../layout", default-features = false, features = ["dsl"] }
bevy = { version = "0.11", default-features = false, features = [
  "bevy_ui", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_render"
] }

[package.metadata.release]
pre-release-replacements = [
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../the_book/choosing_a_cuicui_crate.md"},
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../examples/simple_menu/README.md"},
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../examples/chirp_menu/README.md"},
  {search="cuicui_layout_bevy_ui = .*",replace="cuicui_layout_bevy_ui = \"{{version}}\"",file="../the_book/usage.md"},
]
