[package]
name = "cuicui_layout_bevy_ui"
description = "Integration with bevy_ui for cuicui_layout"
categories = ["game-development", "gui"]
keywords = ["bevy", "layout", "ui"]
readme = "README.md"
version = "0.12.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["debug_bevy_ui", "reflect", "chirp"]
debug_bevy_ui = ["cuicui_layout/debug_bevy_ui"]
reflect = ["cuicui_layout/reflect"]
## Enable chirp ParseDsl implementation
chirp = ["cuicui_chirp", "cuicui_layout/chirp", "reflect"]

[dependencies]
bevy_mod_sysfail.workspace = true
css-color.workspace = true
enumset.workspace = true
thiserror.workspace = true
cuicui_chirp = { workspace = true, optional = true }
cuicui_dsl.workspace = true
cuicui_layout = { workspace = true, features = ["dsl"] }
bevy = { workspace = true, features = [
  "bevy_ui", "bevy_text", "bevy_core_pipeline", "bevy_asset", "bevy_render"
] }

[package.metadata.release]
pre-release-replacements = [
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../the_book/choosing_a_cuicui_crate.md"},
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../examples/simple_menu/README.md"},
  {search="/cuicui_layout_bevy_ui-v[0-9.]+/",replace="/cuicui_layout_bevy_ui-v{{version}}/",file="../examples/simple_menu/README.md"},
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../examples/chirp_menu/README.md"},
  {search="cuicui_layout_bevy_ui/[0-9.]+/",replace="cuicui_layout_bevy_ui/{{version}}/",file="../examples/custom_dsl/README.md"},
  {search="cuicui_layout_bevy_ui = .*",replace="cuicui_layout_bevy_ui = \"{{version}}\"",file="../the_book/usage.md"},
]
