[package]
name = "chirp_loader"
description = "Shows usage of the chirp bevy AssetLoader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "chirp_loader"
path = "main.rs"

[dependencies]
bevy-inspector-egui.workspace = true
bevy-scene-hook.workspace = true
cuicui_chirp = { version = "0.8.1", path = "../../chirp", features = ["bevy_asset"] }
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = "0.11"

[package.metadata.release]
release = false
