[package]
name = "chirpunk"
description = "Demonstrates the bevy-lunex cyberpunk menu using .chirp files"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bevy_framepace.workspace = true
bevy-inspector-egui.workspace = true
bevy-ui-navigation.workspace = true
rust-hsluv.workspace = true
cuicui_chirp.workspace = true
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", features = ["jpeg", "default_font"] }

[package.metadata.release]
release = false
