[package]
name = "chirpunk"
description = "Reproduces the bevy-lunex cyberpunk menu using cuicui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["inspector"]
inspector = []
advanced_logging = []

[dependencies]
anyhow.workspace = true
bevy_framepace.workspace = true
bevy-inspector-egui.workspace = true
# This would prevent click-through for the bevy-inspector-egui window, but saddly
# it causes a massive frame drop
# bevy_mod_picking.workspace = true
bevy-ui-navigation.workspace = true
rust-hsluv.workspace = true
cuicui_chirp.workspace = true
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", features = ["jpeg", "default_font"] }

[package.metadata.release]
release = false
