[package]
name = "chirpunk"
description = "Reproduces the bevy-lunex cyberpunk menu using cuicui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["inspector"]
inspector = []
advanced_logging = []

[dependencies]
anyhow.workspace = true
bevy_framepace.workspace = true
bevy-inspector-egui.workspace = true
# This would prevent click-through for the bevy-inspector-egui window, but saddly
# it causes a massive frame drop
# bevy_mod_picking.workspace = true
bevy-ui-navigation.workspace = true
cuicui_examples = { path = "../cuicui_examples" }
log.workspace = true
rust-hsluv.workspace = true
tracing.workspace = true
cuicui_chirp = { workspace = true, default-features = true }
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { workspace = true, default-features = true, features = ["jpeg", "default_font"] }

[package.metadata.release]
release = false
