[package]
name = "custom_dsl"
description = "How to define your own DslBundle, ParseDsl, and use it"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "custom_dsl"
path = "main.rs"

[dependencies]
bevy-inspector-egui.workspace = true
cuicui_dsl.workspace = true
cuicui_layout_bevy_sprite.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", features = ["png", "x11", "bevy_asset", "bevy_render", "bevy_sprite" ] }

[package.metadata.release]
release = false
