[package]
name = "custom_dsl"
description = "How to define your own DslBundle, ParseDsl, and use it"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
advanced_logging = []

[dependencies]
bevy-inspector-egui.workspace = true
bevy_mod_picking.workspace = true
cuicui_examples = { path = "../cuicui_examples" }
cuicui_dsl.workspace = true
cuicui_chirp.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.12", features = ["png", "x11", "bevy_asset", "bevy_render", "bevy_sprite" ] }

[package.metadata.release]
release = false
