[package]
name = "hello_world"
description = "The most simple way of using cuicui_layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "hello_world"
path = "main.rs"

[dependencies]
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", features = ["png", "jpeg", "x11", "bevy_asset", "bevy_ui", "default_font"] }

[package.metadata.release]
release = false
