[package]
name = "imports"
description = "Validate that importing in cuicui_chirp works as expected"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
advanced_logging = []

[[bin]]
name = "imports"
path = "main.rs"

[dependencies]
# bevy_framepace.workspace = true
# bevy-inspector-egui.workspace = true
cuicui_chirp = { workspace = true, default-features = true }
cuicui_examples = { path = "../cuicui_examples" }
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { workspace = true, features = ["png", "jpeg", "x11", "bevy_asset", "bevy_ui", "default_font"] }

[package.metadata.release]
release = false
