[package]
name = "simple_menu"
description = "How to build a simple single-screen menu using cuicui_dsl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "simple_menu"
path = "main.rs"

[dependencies]
# bevy_framepace.workspace = true
# bevy-inspector-egui.workspace = true
cuicui_dsl.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { workspace = true, features = ["png", "jpeg", "x11", "bevy_asset", "bevy_ui", "default_font"] }

[package.metadata.release]
release = false
