[package]
name = "sprite_debug"
description = "Show extents of containers using cuicui_layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sprite_debug"
path = "main.rs"

[dependencies]
cuicui_dsl.workspace = true
cuicui_layout.workspace = true
cuicui_layout_bevy_sprite.workspace = true
bevy-inspector-egui.workspace = true
bevy = { version = "0.11", features = ["png", "x11", "bevy_asset", "bevy_render", "bevy_sprite" ] }

[package.metadata.release]
release = false
