[package]
name = "sprite_mesh_debug"
description = "Show extents of containers using cuicui_layout"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "sprite_mesh_debug"
path = "main.rs"

[dependencies]
cuicui_dsl.workspace = true
cuicui_layout.workspace = true
cuicui_layout_bevy_sprite.workspace = true
bevy = { version = "0.11", features = ["png", "x11", "bevy_asset", "bevy_render", "bevy_sprite" ] }
