[package]
name = "templates"
description = "How to use templates in cuicui_chirp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "templates"
path = "main.rs"

[dependencies]
bevy_framepace.workspace = true
bevy-inspector-egui.workspace = true
cuicui_chirp.workspace = true
cuicui_layout_bevy_ui.workspace = true
cuicui_layout.workspace = true
bevy = { version = "0.11", features = ["png", "jpeg", "x11", "bevy_asset", "bevy_ui", "default_font"] }

[package.metadata.release]
release = false
