[package]
name = "ui_debug"
description = "Show extents of containers for bevy_ui cuicui_layout adaptor"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "ui_debug"
path = "main.rs"

[dependencies]
cuicui_dsl.workspace = true
cuicui_layout.workspace = true
cuicui_layout_bevy_ui.workspace = true
bevy-inspector-egui.workspace = true
bevy = { version = "0.11", features = ["png", "jpeg", "x11", "bevy_asset", "bevy_ui", "default_font"] }
